# parkupine-ai

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  common.env  docker-compose.yml  private.env.example  pyproject.toml
.github/workflows/: pre-commit.yml
parkupine/: agent.py  auth.py  context.py  dependencies.py  mcp.py  rag.py  server.py  settings.py  tables.py  worker.py
tests/: conftest.py
tests/cassettes/: test_agent_evaluation[inputs0-expected0].yaml  test_agent_evaluation[inputs1-expected1].yaml  test_agent_evaluation[inputs2-expected2].yaml
tests/integration/: conftest.py  test_integration.py
tests/system/: conftest.py  test_system_agent.py
tests/unit/parkupine/: test_agent.py  test_server.py  test_worker.py
