[project]
name = "parkupine"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexander Gorokhov",email = "sashgorokhov@gmail.com"}
]
requires-python = "~3.14"
dependencies = [
    "langchain[openai] (<2)",
    "langgraph (<2)",
    "fastapi (<0.200)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "fastapi-openai-compat @ git+https://github.com/sashgorokhov-forks/fastapi-openai-compat.git@v2.1"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]
